updated-e4040-hw2-task5

--- a/e4040/hw2/.gitignore
+++ b/e4040/hw2/.gitignore
@@ -11,6 +11,7 @@ __pycache__/*
 #Data      files#
 #################
 data/*
+model/*
 
 ###############
 #Jupyter files#
@@ -22,3 +23,7 @@ data/*
 #log     files#
 ###############
 .logs/*
+
+
+
+
